--- a/lab5/index.html
+++ b/lab5/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"
+    integrity="sha384-gOibXC9S5JpMrpEP0ee6wCSVHjFSEuOzLLzTUmg58qM+mJ1rI8h/aY3lS9YUmo55"
+    crossorigin="">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Leaflet.js with WMTS in RD</title>
@@ -23,7 +26,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.12/proj4.js"></script>
     <script src="lib/proj4leaflet.js"></script>
     <script src="lib/leaflet.wms.js"></script>
-
+    <script src="https://unpkg.com/leaflet-control-geocoder@2.4.0/dist/Control.Geocoder.js"
+    integrity="sha384-rGCFEOuLo3qUtZTJs5enHPutiikUQ6AJroPg2rQqOhmXBPmZdvhwK2aCmkhe9gwo" crossorigin=""></script>
     <script src="lib/geojson.wfs.js"></script>
 
     <script src="main.js"></script>
